# rust-deepseek-agent

./: .gitignore  AGENT_GUIDE.md  Cargo.toml  README.md  Rust课程大作业实验报告.docx  mcp_servers.example.json  today_hot_news.html
.agents/skills/code-review/: SKILL.md
.agents/skills/rust-agent-project/: SKILL.md
.agents/skills/rust-teacher/: SKILL.md
.agents/skills/task-planner/: SKILL.md
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  DOC_SYNC.md  RAG_MCP.md  TUI_DESIGN.md
src/: agent.rs  config.rs  llm.rs  main.rs  message.rs  workspace.rs
src/hooks/: mod.rs
src/mcp/: mod.rs  protocol.rs
src/memory/: mod.rs
src/retrieval/: mod.rs
src/skills/: mod.rs
src/sub_agent/: mod.rs
src/todo/: mod.rs
src/tools/: calc.rs  command.rs  file.rs  git.rs  mod.rs  repo.rs  search.rs  web.rs
src/ui/: cli.rs  mod.rs  state.rs  tui.rs
