[package]
name = "rust-deepseek-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "2.2.0", default-features = false, features = ["client", "transport-child-process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
